--- a/STM32F407VET6_START/STM32F407VET6_START/STM32F407VET6_START.ioc
+++ b/STM32F407VET6_START/STM32F407VET6_START/STM32F407VET6_START.ioc
@@ -13,16 +13,17 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA6
 Mcu.Pin5=PA7
-Mcu.Pin6=PA11
-Mcu.Pin7=PA12
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.Pin9=VP_TIM6_VS_ClockSourceINT
-Mcu.PinsNb=11
+Mcu.Pin6=PA9
+Mcu.Pin7=PA11
+Mcu.Pin8=PA12
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
@@ -52,6 +53,8 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=LED2
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA9.Mode=Activate_VBUS
+PA9.Signal=USB_OTG_FS_VBUS
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -112,7 +115,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLSourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
 RCC.PLLCLKFreq_Value=168000000
@@ -120,6 +123,7 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=168000000
